# lab_reports

./: .gitignore  _quarto.yml  devbox.json  pyproject.toml
biomed_tiss_eng/cytotoxicity/: ct_report.qmd  ref.bib
biomed_tiss_eng/microvasculature/: appendix.qmd  appendix.quarto_ipynb  ref.bib  vasc_report.qmd
biomed_tiss_eng/seminar/: ibs_summary.qmd  ref.bib
biot_industry/: news.qmd
internship/: letter.qmd  ref.bib  report.qmd  report.tex  title.tex
lab_app_reports/ag_biotech/: ab.qmd
lab_app_reports/bradford_assay/: ba.qmd
lab_app_reports/crispr_cancer/: ca.qmd  cancer.qmd  virus.qmd
lab_app_reports/elisa_radial/: er.qmd
lab_app_reports/enzyme_kinematics/: dna_damage.qmd  ek.qmd
lab_app_reports/human_pcr/: ca.qmd  hp.qmd
lab_app_reports/ligation_transformation/: lt.qmd
lab_app_reports/protein_purification/: pp.qmd  pp.quarto_ipynb
lab_app_reports/qpcr/: qpcr.qmd
lab_app_reports/rt_pcr/: rp.qmd
med_tox_reports/comet_assay/: cma.qmd
med_tox_reports/elisa_immunology/: ei.qmd  ei.quarto_ipynb
med_tox_reports/heavy_metals/: hm.qmd  hm.quarto_ipynb
med_tox_reports/metal_nanoparticles/: mn.qmd  mn.quarto_ipynb
med_tox_reports/rev_mutation/: rm.qmd
protein_prod/: appendix.qmd  bib.txt  bioprocessing.qmd  fermentation.qmd
protein_prod/bioprocessing/: appendix.qmd  appendix.quarto_ipynb  bioprocessing.qmd
protein_prod/data/: Bradford Template_Sp23.xlsx  Group A_2025 bradford.txt  Lysozyme kinetic_GrA_sp2025.txt  afy_chromat.xlsx  benchtop.xlsx  beta_gal_assay.xlsx  bgal_kinetic_ferm.csv  bgal_kinetic_purification.txt  lys_activity.csv  (+2 more)
(+31 files in other folders)
