[tool.poetry]
name = "lab-reports"
version = "0.1.0"
description = ""
authors = ["Matthew lyn <mml167@georgetown.edu>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
bokeh = "^3.6.0"
polars = "^1.9.0"
ipykernel = "^6.29.5"
nbclient = "^0.10.0"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
orca = "^1.8"
scikit-learn = "^1.5.2"
pyarrow = "^17.0.0"
altair = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
